Fix blurred bg

--- a/src/components/ui/BlurredBg/BlurredBg.module.scss
+++ b/src/components/ui/BlurredBg/BlurredBg.module.scss
@@ -1,15 +1,15 @@
 .main {
   position: relative;
-  width: 100%;
+  overflow: hidden;
+}
+
+.bg {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  bottom: -10px;
+  left: -10px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-}
-
-.backdrop {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
 }
